// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryItem when hovering renders a category 1`] = `
<div
  class="css-view-1dbjc4n r-cursor-1loqt21 r-display-1adg3ll r-outlineStyle-1ny4l3l r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
  data-focusable="true"
  data-testid="category-item"
  style="background-color: rgb(50, 47, 55);"
  tabindex="0"
>
  <mock-category-item-image
    height="250"
    name="Fortnite"
    testid="category-item-image"
    url="categories/Fortnite-376x500.jpg"
    width="188"
  />
  <mock-category-item-detail
    ishighlighted="true"
    name="Fortnite"
    testid="category-item-detail"
    viewerscount="241208"
    width="188"
  />
</div>
`;

exports[`CategoryItem when not hovering renders a category 1`] = `
<div
  class="css-view-1dbjc4n r-cursor-1loqt21 r-display-1adg3ll r-outlineStyle-1ny4l3l r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
  data-focusable="true"
  data-testid="category-item"
  tabindex="0"
>
  <mock-category-item-image
    height="250"
    name="Fortnite"
    testid="category-item-image"
    url="categories/Fortnite-376x500.jpg"
    width="188"
  />
  <mock-category-item-detail
    ishighlighted="false"
    name="Fortnite"
    testid="category-item-detail"
    viewerscount="241208"
    width="188"
  />
</div>
`;
